[Sensors] The sensor state changes from "active" to "activated"

The sensor state changes from "active" to "activated" in the latest ED specification [1].

[1] https://w3c.github.io/sensors/#state

BUG=667728

Review-Url: https://codereview.chromium.org/2524953002
Cr-Commit-Position: refs/heads/master@{#434454}

Former-commit-id: 12710441dec88821cea09b9ec3bd76802bf3bfdf